# multi-agents-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  azure.yaml  docker-compose.yaml  hello.py  pyproject.toml
.dvc/: config
.github/workflows/: release.yml
app/: main.py
app/assets/: official_terms.parquet
app/auth/: oauth2.py  password.py
app/core/: config.py
app/database/: cosmos_client.py
app/middleware/: audit.py
app/models/: database.py  models.py
app/routers/: authentication.py  booking.py  clinic.py  record.py  transcription.py  translate.py  user.py  vaccine.py
app/schemas/: address.py  audit.py  base.py  booking.py  chat.py  clinic.py  language.py  oauth2.py  record.py  translate.py  user.py  vaccine.py  voice.py
app/services/approaches/: promptmanager.py  settings.py
app/services/approaches/prompts/: language_detector.prompty  language_detector_tool.json  translator.prompty
app/services/speech/: speech_to_text.py
app/services/translate/: language_openai.py
data/: .gitignore  data.sql  get_instituitions_response.json.dvc  schema.sql  vaccination_db.sqlite.dvc
infra/: main.bicep
postman/: Agents.postman_collection.json  DEV-Agents.postman_environment.json
scripts/: deploy_backendapi_container.ps1  deploy_backendapi_container.sh  fetch_sas_token.py  get_data.ps1  get_data.sh  setup_dvc.ps1  setup_dvc.sh  start.ps1  start.sh  test.ps1  test.sh
tests/: conftest.py  test_auth.py  test_booking.py  test_clinic.py  test_record.py  test_root.py  test_user.py  test_vaccine.py
